Java 9 compatibility. (#26)
Deprecated features:

* new Long(String) (use autoboxing)

Java EE features:

* Add --add-modules java.xml.ws; also requires Ant 1.9.4 or later